Home page design update.

--- a/index.html
+++ b/index.html
@@ -80,9 +80,15 @@
       TODO: -------------------------------------------
      -->
   <!-- Swiper -->
+
+  <div class="first-decoration"></div>
+  <div class="second-decoration"></div>
+  <div class="third-decoration"></div>
+  <div class="fourth-decoration"></div>
+  
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="./img/img1.jpg"></div>
+      <div class="swiper-slide"><img src="./img/fondo.png"></div>
       <div class="swiper-slide"><img src="./img/img2.jpg"></div>
       <div class="swiper-slide"><img src="./img/img3.jpg"></div>
       <div class="swiper-slide"><img src="./img/1.jpg"></div>
@@ -93,6 +99,7 @@
     <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
   </div>
+  
 
   <div class="welcome">
     <p>La Fundación Cultural Pedro Moncayo te da la Bienvenida.</p>
