--- a/pages/dignities/index.html
+++ b/pages/dignities/index.html
@@ -117,7 +117,7 @@
         <h2>Dirección Actual</h2>
         <div class="container__first">
           <div class="container__first__cell">
-            <img src="../../img/image_example.jpg">
+            <img src="../../img/user_icon.png">
             <h3>García Gallegos Mario Francisco Raul</h3>
             <h3>Presidente Ejecutivo</h3>
           </div>
