--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="./img/fondo.png"></div>
+      <div class="swiper-slide"><img src="./img/img1.jpg"></div>
       <div class="swiper-slide"><img src="./img/img2.jpg"></div>
       <div class="swiper-slide"><img src="./img/img3.jpg"></div>
       <div class="swiper-slide"><img src="./img/1.jpg"></div>
