--- a/pages/workshop/index.html
+++ b/pages/workshop/index.html
@@ -80,8 +80,11 @@
     TODO: -------------------------------------------
    -->
 
-  <div class='slideshow-container'>
-    <p>Talleres</p>
+  <div class="banner">
+    <div class='banner-container'>
+      <p>Talleres</p>
+    </div>
+    <div class="banner__decoration"></div>
   </div>
 
   <!-- 
