--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="swiper-slide"><img src="./img/img1.jpg"></div>
       <div class="swiper-slide"><img src="./img/img2.jpg"></div>
       <div class="swiper-slide"><img src="./img/img3.jpg"></div>
-      <div class="swiper-slide"><img src="./img/1.jpg"></div>
+      <div class="swiper-slide"><img src="./img/fundacion.jpg"></div>
       <div class="swiper-slide"><img src="./img/2.jpg"></div>
       <div class="swiper-slide"><img src="./img/3.jpg"></div>
     </div>
