--- a/pages/dignities/index.html
+++ b/pages/dignities/index.html
@@ -82,9 +82,12 @@
     TODO: -------------------------------------------
    -->
 
-  <div class='slideshow-container'>
-    <p>Consejo Directivo</p>
-  </div>
+   <div class="banner">
+    <div class='banner-container'>
+        <p>Consejo Directivo</p>
+    </div>
+    <div class="banner__decoration"></div>
+</div>
 
   <!-- 
     TODO: -------------------------------------------
