--- a/pages/history/index.html
+++ b/pages/history/index.html
@@ -80,8 +80,11 @@
     TODO: -------------------------------------------
    -->
 
-    <div class='slideshow-container'>
-        <p>Restauración</p>
+    <div class="banner">
+        <div class='banner-container'>
+            <p>Restauración</p>
+        </div>
+        <div class="banner__decoration"></div>
     </div>
 
     <!-- 
