Update design footer, all pages.

--- a/pages/gallery/index.html
+++ b/pages/gallery/index.html
@@ -76,6 +76,19 @@
 
   <!-- 
     TODO: -------------------------------------------
+    TODO: BANNER
+    TODO: -------------------------------------------
+   -->
+
+  <div class="banner">
+    <div class='banner-container'>
+      <p>Galeria</p>
+    </div>
+    <div class="banner__decoration"></div>
+  </div>
+
+  <!-- 
+    TODO: -------------------------------------------
     TODO: GALERIA
     TODO: -------------------------------------------
    -->
