Update to header animation.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       TODO: HEADER
       TODO: -----------------------------------------------------------------------------------------------------------
      -->
+
   <header class="wrapper">
     <nav>
       <div class="wrapper__logo">
@@ -37,7 +38,7 @@
       <label for="wrapper__show-menu" class="wrapper__menu-icon"><i class="fas fa-bars"></i></label>
       <div class="wrapper__container">
         <ul class="wrapper__container__links">
-          <li class="selected"><a href="#">Inicio</a></li>
+          <li class="selected"><a href="index.html">Inicio</a></li>
           <li>
             <a href="#" class="desktop-link">La Fundación <span class="caret-icon"></span></a>
             <input type="checkbox" id="show-features">
@@ -54,7 +55,14 @@
             <label for="show-services">Servicios <span class="caret-icon"></span></label>
             <ul>
               <li><a href="./pages/dignities/index.html">Dignidades</a></li>
-              <li><a href="#">Drop Menu 2</a></li>
+
+              <!--
+                  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+                  SI SE DESEA AUMENTAR EL MENU DESCOMENTAR
+                  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ 
+                -->
+
+              <!-- <li><a href="#">Drop Menu 2</a></li>
               <li><a href="#">Drop Menu 3</a></li>
               <li>
                 <a href="#" class="desktop-link ">More Items</a>
@@ -65,7 +73,7 @@
                   <li><a href="#">Sub Menu 2</a></li>
                   <li><a href="#">Sub Menu 3</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </li>
           <li><a href="./pages/gallery/index.html">Galeria</a></li>
@@ -74,6 +82,7 @@
       </div>
     </nav>
   </header>
+
   <!-- 
       TODO: -------------------------------------------
       TODO: CAROUSEL
@@ -85,7 +94,7 @@
   <div class="second-decoration"></div>
   <div class="third-decoration"></div>
   <div class="fourth-decoration"></div>
-  
+
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide"><img src="./img/img1.jpg"></div>
@@ -99,7 +108,7 @@
     <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
   </div>
-  
+
 
   <div class="welcome">
     <p>La Fundación Cultural Pedro Moncayo te da la Bienvenida.</p>
