--- a/pages/history/index.html
+++ b/pages/history/index.html
@@ -92,9 +92,9 @@
     TODO: CUERPO
     TODO: -------------------------------------------
    -->
+
     <main class="main">
         <div class="container">
-
             <div id="top"></div>
             <section class="gallery">
                 <div class="row">
@@ -105,13 +105,11 @@
                                 <img src="./images/nardo.jpg" alt="">
                             </a>
                         </li>
-
                         <li>
                             <a href="#item02">
                                 <img src="./images/agapanto.jpg" alt="">
                             </a>
                         </li>
-
                         <li>
                             <a href="#item03">
                                 <img src="./images/Dinero.jpg" alt="">
@@ -166,52 +164,48 @@
 
                         <img src="./images/nardo.jpg" alt="">
                     </div>
+                </div><!-- / Item 01 -->
+
+                <!-- Item 02 -->
+                <div id="item02" class="port">
+                    <div class="row">
+                        <div class="description">
+                            <h1>Agapanto</h1>
+                            <p>El agapanto (Agapanthus), también conocido con el nombre de lirio africano, es una planta
+                                con
+                                flor
+                                muy vistosa y resistente. Se cultivan en primavera, de manera que ofrecerán flores
+                                durante todo
+                                el
+                                verano y hasta que comience el otoño. Necesita una ubicación al sol, aunque también
+                                tolera zonas
+                                de
+                                semisombra. Necesita bastante agua desde que se planta y durante la floración.</p>
+                        </div>
+                        <img src="./images/agapanto.jpg" alt="">
+                    </div> <!-- / row -->
+
+                </div> <!-- / Item 02 -->
+
+                <!-- Item 03 -->
+                <div id="item03" class="port">
+                    <div class="row">
+                        <div class="description">
+                            <h1>Planta china del dinero</h1>
+                            <p>La Pilea peperomioides se ha convertido en toda una estrella de las redes sociales.
+                                También se la
+                                conoce con el nombre de 'planta del misionero' o 'hiedra sueca'. Es una planta amante de
+                                los
+                                ambientes sombríos, frescos y húmedos. Además, es muy resistente y sus cuidados son muy
+                                sencillos. En cuanto a los riegos, lo ideal es esperar a que se seque el sustrato entre
+                                riegos. </p>
+                        </div>
+                        <img src="./images/Dinero.jpg" alt="">
+                    </div>
                 </div> <!-- / row -->
 
-        </div> <!-- / Item 01 -->
-
-        <!-- Item 02 -->
-        <div id="item02" class="port">
-
-            <div class="row">
-                <div class="description">
-                    <h1>Agapanto</h1>
-                    <p>El agapanto (Agapanthus), también conocido con el nombre de lirio africano, es una planta con
-                        flor
-                        muy vistosa y resistente. Se cultivan en primavera, de manera que ofrecerán flores durante todo
-                        el
-                        verano y hasta que comience el otoño. Necesita una ubicación al sol, aunque también tolera zonas
-                        de
-                        semisombra. Necesita bastante agua desde que se planta y durante la floración.</p>
-                </div>
-                <img src="./images/agapanto.jpg" alt="">
-            </div> <!-- / row -->
-
-        </div> <!-- / Item 02 -->
-        <!-- Item 03 -->
-        <div id="item03" class="port">
-
-            <div class="row">
-                <div class="description">
-                    <h1>Planta china del dinero</h1>
-                    <p>La Pilea peperomioides se ha convertido en toda una estrella de las redes sociales. También se la
-                        conoce con el nombre de 'planta del misionero' o 'hiedra sueca'. Es una planta amante de los
-                        ambientes sombríos, frescos y húmedos. Además, es muy resistente y sus cuidados son muy
-                        sencillos. En cuanto a los riegos, lo ideal es esperar a que se seque el sustrato entre
-                        riegos. </p>
-                </div>
-
-                <img src="./images/Dinero.jpg" alt="">
-            </div>
-        </div> <!-- / row -->
-
-        </section> <!-- / projects -->
-
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="./script.js"></script>
-        </div>
-
+            </section> <!-- / projects -->
+        </div> 
     </main>
 
     <!-- 
@@ -294,7 +288,9 @@
             <span class="footer-bottom__copyright">© Copyright 2022 | Fundación Cultural Pedro Moncayo</span>
         </div>
     </footer>
-    <script src="../../script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
