Header code cleanup.

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
               <li><a href="./pages/dignities/index.html">Dignidades</a></li>
 
               <!--
-                  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
-                  SI SE DESEA AUMENTAR EL MENU DESCOMENTAR
-                  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ 
+                  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+                  SI SE DESEA AUMENTAR PÁGINAS AL MENU DESCOMENTAR
+                  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ \\\\\\\
                 -->
 
               <!-- <li><a href="#">Drop Menu 2</a></li>
