--- a/pages/dignities/index.html
+++ b/pages/dignities/index.html
@@ -21,6 +21,7 @@
       TODO: HEADER
       TODO: -----------------------------------------------------------------------------------------------------------
      -->
+
   <header class="wrapper">
     <nav>
       <div class="wrapper__logo">
@@ -54,19 +55,26 @@
             <input type="checkbox" id="show-services">
             <label for="show-services">Servicios <span class="caret-icon"></span></label>
             <ul>
-              <li class="selected"><a href="#">Dignidades</a></li>
-              <li><a href="#">Drop Menu 2</a></li>
-              <li><a href="#">Drop Menu 3</a></li>
-              <li>
-                <a href="#" class="desktop-link ">More Items</a>
-                <input type="checkbox" id="show-items">
-                <label for="show-items">More Items</label>
-                <ul>
-                  <li><a href="#">Sub Menu 1</a></li>
-                  <li><a href="#">Sub Menu 2</a></li>
-                  <li><a href="#">Sub Menu 3</a></li>
-                </ul>
-              </li>
+              <li class="selected"><a href="./index.html">Dignidades</a></li>
+
+              <!--
+                      \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+                      SI SE DESEA AUMENTAR PÁGINAS AL MENU DESCOMENTAR
+                      \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ \\\\\\\
+                    -->
+
+              <!-- <li><a href="#">Drop Menu 2</a></li>
+                  <li><a href="#">Drop Menu 3</a></li>
+                  <li>
+                    <a href="#" class="desktop-link ">More Items</a>
+                    <input type="checkbox" id="show-items">
+                    <label for="show-items">More Items</label>
+                    <ul>
+                      <li><a href="#">Sub Menu 1</a></li>
+                      <li><a href="#">Sub Menu 2</a></li>
+                      <li><a href="#">Sub Menu 3</a></li>
+                    </ul>
+                  </li> -->
             </ul>
           </li>
           <li><a href="../gallery/index.html">Galeria</a></li>
@@ -82,12 +90,12 @@
     TODO: -------------------------------------------
    -->
 
-   <div class="banner">
+  <div class="banner">
     <div class='banner-container'>
-        <p>Consejo Directivo</p>
+      <p>Consejo Directivo</p>
     </div>
     <div class="banner__decoration"></div>
-</div>
+  </div>
 
   <!-- 
     TODO: -------------------------------------------
@@ -98,16 +106,20 @@
     <div class="container">
       <div class="social">
         <div>
-          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i
+              class="fab fa-facebook"></i></a>
         </div>
         <div>
-          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i
+              class="fab fa-twitter"></i></a>
         </div>
         <div>
-          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i
+              class="fab fa-whatsapp"></i></a>
         </div>
         <div>
-          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/fundacionpedromoncayoecuador" target="_blank"><i
+              class="fab fa-instagram"></i></a>
         </div>
       </div>
       <!-- <p>
