--- a/pages/gallery/index.html
+++ b/pages/gallery/index.html
@@ -19,6 +19,7 @@
       TODO: HEADER
       TODO: -----------------------------------------------------------------------------------------------------------
      -->
+
   <header class="wrapper">
     <nav>
       <div class="wrapper__logo">
@@ -53,21 +54,28 @@
             <label for="show-services">Servicios <span class="caret-icon"></span></label>
             <ul>
               <li><a href="../dignities/index.html">Dignidades</a></li>
-              <li><a href="#">Drop Menu 2</a></li>
-              <li><a href="#">Drop Menu 3</a></li>
-              <li>
-                <a href="#" class="desktop-link ">More Items</a>
-                <input type="checkbox" id="show-items">
-                <label for="show-items">More Items</label>
-                <ul>
-                  <li><a href="#">Sub Menu 1</a></li>
-                  <li><a href="#">Sub Menu 2</a></li>
-                  <li><a href="#">Sub Menu 3</a></li>
-                </ul>
-              </li>
+
+              <!--
+                        \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+                        SI SE DESEA AUMENTAR PÁGINAS AL MENU DESCOMENTAR
+                        \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ \\\\\\\
+                      -->
+
+              <!-- <li><a href="#">Drop Menu 2</a></li>
+                    <li><a href="#">Drop Menu 3</a></li>
+                    <li>
+                      <a href="#" class="desktop-link ">More Items</a>
+                      <input type="checkbox" id="show-items">
+                      <label for="show-items">More Items</label>
+                      <ul>
+                        <li><a href="#">Sub Menu 1</a></li>
+                        <li><a href="#">Sub Menu 2</a></li>
+                        <li><a href="#">Sub Menu 3</a></li>
+                      </ul>
+                    </li> -->
             </ul>
           </li>
-          <li class="selected"><a href="#">Galeria</a></li>
+          <li class="selected"><a href="./index.html">Galeria</a></li>
           <li><a href="../workshop/index.html">Talleres</a></li>
         </ul>
       </div>
