--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -21,6 +21,7 @@
       TODO: HEADER
       TODO: -----------------------------------------------------------------------------------------------------------
      -->
+
   <header class="wrapper">
     <nav>
       <div class="wrapper__logo">
@@ -44,7 +45,7 @@
             <input type="checkbox" id="show-features">
             <label for="show-features">La Fundación <span class="caret-icon"></span></label>
             <ul>
-              <li class="selected"><a href="#">Quiénes Somos</a></li>
+              <li class="selected"><a href="./index.html">Quiénes Somos</a></li>
               <li><a href="../company/index.html">Historia</a></li>
               <li><a href="../history/index.html">Restauración</a></li>
             </ul>
@@ -55,7 +56,14 @@
             <label for="show-services">Servicios <span class="caret-icon"></span></label>
             <ul>
               <li><a href="../dignities/index.html">Dignidades</a></li>
-              <li><a href="#">Drop Menu 2</a></li>
+
+              <!--
+                  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+                  SI SE DESEA AUMENTAR PÁGINAS AL MENU DESCOMENTAR
+                  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ \\\\\\\
+                -->
+
+              <!-- <li><a href="#">Drop Menu 2</a></li>
               <li><a href="#">Drop Menu 3</a></li>
               <li>
                 <a href="#" class="desktop-link ">More Items</a>
@@ -66,7 +74,7 @@
                   <li><a href="#">Sub Menu 2</a></li>
                   <li><a href="#">Sub Menu 3</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </li>
           <li><a href="../gallery/index.html">Galeria</a></li>
