--- a/pages/company/index.html
+++ b/pages/company/index.html
@@ -21,6 +21,7 @@
       TODO: HEADER
       TODO: -----------------------------------------------------------------------------------------------------------
      -->
+
   <header class="wrapper">
     <nav>
       <div class="wrapper__logo">
@@ -45,7 +46,7 @@
             <label for="show-features">La Fundación <span class="caret-icon"></span></label>
             <ul>
               <li><a href="../about/index.html">Quiénes Somos</a></li>
-              <li class="selected"><a href="#">Historia</a></li>
+              <li class="selected"><a href="./index.html">Historia</a></li>
               <li><a href="../history/index.html">Restauración</a></li>
             </ul>
           </li>
@@ -55,18 +56,25 @@
             <label for="show-services">Servicios <span class="caret-icon"></span></label>
             <ul>
               <li><a href="../dignities/index.html">Dignidades</a></li>
-              <li><a href="#">Drop Menu 2</a></li>
-              <li><a href="#">Drop Menu 3</a></li>
-              <li>
-                <a href="#" class="desktop-link ">More Items</a>
-                <input type="checkbox" id="show-items">
-                <label for="show-items">More Items</label>
-                <ul>
-                  <li><a href="#">Sub Menu 1</a></li>
-                  <li><a href="#">Sub Menu 2</a></li>
-                  <li><a href="#">Sub Menu 3</a></li>
-                </ul>
-              </li>
+
+              <!--
+                    \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+                    SI SE DESEA AUMENTAR PÁGINAS AL MENU DESCOMENTAR
+                    \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ \\\\\\\
+                  -->
+
+              <!-- <li><a href="#">Drop Menu 2</a></li>
+                <li><a href="#">Drop Menu 3</a></li>
+                <li>
+                  <a href="#" class="desktop-link ">More Items</a>
+                  <input type="checkbox" id="show-items">
+                  <label for="show-items">More Items</label>
+                  <ul>
+                    <li><a href="#">Sub Menu 1</a></li>
+                    <li><a href="#">Sub Menu 2</a></li>
+                    <li><a href="#">Sub Menu 3</a></li>
+                  </ul>
+                </li> -->
             </ul>
           </li>
           <li><a href="../gallery/index.html">Galeria</a></li>
@@ -82,12 +90,12 @@
     TODO: -------------------------------------------
    -->
 
-   <div class="banner">
+  <div class="banner">
     <div class='banner-container'>
-        <p>Nuestra Historia</p>
+      <p>Nuestra Historia</p>
     </div>
     <div class="banner__decoration"></div>
-</div>
+  </div>
 
   <!-- 
     TODO: -------------------------------------------
