--- a/pages/history/index.html
+++ b/pages/history/index.html
@@ -19,6 +19,7 @@
       TODO: HEADER
       TODO: -----------------------------------------------------------------------------------------------------------
      -->
+
     <header class="wrapper">
         <nav>
             <div class="wrapper__logo">
@@ -44,7 +45,7 @@
                         <ul>
                             <li><a href="../about/index.html">Quiénes Somos</a></li>
                             <li><a href="../company/index.html">Historia</a></li>
-                            <li class="selected"><a href="#">Restauración</a></li>
+                            <li class="selected"><a href="./index.html">Restauración</a></li>
                         </ul>
                     </li>
                     <li>
@@ -53,18 +54,25 @@
                         <label for="show-services">Servicios <span class="caret-icon"></span></label>
                         <ul>
                             <li><a href="../dignities/index.html">Dignidades</a></li>
-                            <li><a href="#">Drop Menu 2</a></li>
-                            <li><a href="#">Drop Menu 3</a></li>
-                            <li>
-                                <a href="#" class="desktop-link ">More Items</a>
-                                <input type="checkbox" id="show-items">
-                                <label for="show-items">More Items</label>
-                                <ul>
-                                    <li><a href="#">Sub Menu 1</a></li>
-                                    <li><a href="#">Sub Menu 2</a></li>
-                                    <li><a href="#">Sub Menu 3</a></li>
-                                </ul>
-                            </li>
+
+                            <!--
+                            \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+                            SI SE DESEA AUMENTAR PÁGINAS AL MENU DESCOMENTAR
+                            \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ \\\\\\\
+                          -->
+
+                            <!-- <li><a href="#">Drop Menu 2</a></li>
+                        <li><a href="#">Drop Menu 3</a></li>
+                        <li>
+                          <a href="#" class="desktop-link ">More Items</a>
+                          <input type="checkbox" id="show-items">
+                          <label for="show-items">More Items</label>
+                          <ul>
+                            <li><a href="#">Sub Menu 1</a></li>
+                            <li><a href="#">Sub Menu 2</a></li>
+                            <li><a href="#">Sub Menu 3</a></li>
+                          </ul>
+                        </li> -->
                         </ul>
                     </li>
                     <li><a href="../gallery/index.html">Galeria</a></li>
@@ -205,7 +213,7 @@
                 </div> <!-- / row -->
 
             </section> <!-- / projects -->
-        </div> 
+        </div>
     </main>
 
     <!-- 
