--- a/index.html
+++ b/index.html
@@ -90,33 +90,40 @@
      -->
   <!-- Swiper -->
 
-  <div class="first-decoration"></div>
-  <div class="second-decoration"></div>
-  <div class="third-decoration"></div>
-  <div class="fourth-decoration"></div>
+  <div class="carousel">
+    <div class="first-decoration"></div>
+    <div class="second-decoration"></div>
+    <div class="third-decoration"></div>
+    <div class="fourth-decoration"></div>
 
-  <div class="swiper mySwiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="./img/img1.jpg"></div>
-      <div class="swiper-slide"><img src="./img/img2.jpg"></div>
-      <div class="swiper-slide"><img src="./img/img3.jpg"></div>
-      <div class="swiper-slide"><img src="./img/fundacion.jpg"></div>
-      <div class="swiper-slide"><img src="./img/2.jpg"></div>
-      <div class="swiper-slide"><img src="./img/3.jpg"></div>
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="./img/img1.jpg"></div>
+        <div class="swiper-slide"><img src="./img/img2.jpg"></div>
+        <div class="swiper-slide"><img src="./img/img3.jpg"></div>
+        <div class="swiper-slide"><img src="./img/fundacion.jpg"></div>
+        <div class="swiper-slide"><img src="./img/2.jpg"></div>
+        <div class="swiper-slide"><img src="./img/3.jpg"></div>
+      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
     </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
+
+    <div class="welcome">
+      <p>La Fundación Cultural Pedro Moncayo te da la Bienvenida.</p>
+      <audio controls autoplay>
+        <source src="./assets/prueba.mp3" type="audio/mp3">
+        Tu navegador no soporta audio HTML5.
+      </audio>
+    </div>
+
+    <div class="carousel__logo">
+      <img src="./img/Logo.png" alt="">
+    </div>
   </div>
 
 
-  <div class="welcome">
-    <p>La Fundación Cultural Pedro Moncayo te da la Bienvenida.</p>
-    <audio controls autoplay>
-      <source src="./assets/prueba.mp3" type="audio/mp3">
-      Tu navegador no soporta audio HTML5.
-    </audio>
-  </div>
 
   <!-- 
     TODO: -------------------------------------------
