--- a/pages/start/index.html
+++ b/pages/start/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="modal-buttons">
           <a href="" class="">Recuperar contraseña!</a>
-          <button class="input-button">Ingresar</button>
+          <button class="input-button" id="ssll">Ingresar</button>
         </div>
       </div>
       <div class="modal-right">
@@ -33,7 +33,7 @@
       </div>
     </div>
   </main>
-
+  <script src="./script.js"></script>
 </body>
 
 </html>
